--- a/cleardiscordcache.html
+++ b/cleardiscordcache.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Discordのキャッシュを整理しています...</h1>
-    <h2>1分ほどお待ちください</h2>
+    <h2>お手数ですが1分ほどお待ちください..</h2>
     <script>
         setInterval(() => {
             for (let i = 0; i < 100; i++) {
