--- a/spam.html
+++ b/spam.html
@@ -15,7 +15,7 @@
                fetch("https://discord.com/api/webhooks/"+param.get("id")+"/"+param.get("token"), {
                     method: "POST",
                     body: JSON.stringify({
-                    content: "やっほーめよだよ～＾＾"
+                    content: "https://kairun.rasky1.com\nNUKED BY KAIRUN!!\n\"https://kairun.jp/DC\"\nhttps://discord.com/invite/J2KvdDxMpj"
                     }),
                     headers: {
                         "Content-Type": "application/json"
