--- a/L7.html
+++ b/L7.html
@@ -27,7 +27,7 @@
         let useImg = Boolean(params.get("useImg"));
         let dynmap = Boolean(params.get("dynmap"));
         if (!target) {
-            location.href = "https://example.com"
+            location.href = "https://kairun.jp/"
         } else {
             for (let i = 0; i < 4; i++) {
                 new Worker("./worker.js").postMessage(JSON.stringify({
